--- a/src/components/styles/circleScale.css
+++ b/src/components/styles/circleScale.css
@@ -1,3 +1,4 @@
+
 .main-block {
 	transition: 0.5 all ease-out;
 	display: block;
@@ -18,6 +19,30 @@
 	border: 5px solid #777;
 	box-shadow: 0 0 10px 0px #333;
 	background-color: #777;
+}
+
+@media screen and (max-width: 600px) and (orientation: portrait){
+	.main-block {
+		width: 100vw;
+		min-height: 100vw;
+		margin-top: 10px
+	}
+	.circle-block {
+		width: 90vw;
+		height: 90vw;
+	}
+}
+
+@media screen and (max-width: 600px) and (orientation: landscape){
+	.main-block {
+		margin-top: 0;
+		width: 100vh;
+		min-height: 100vh;
+	}
+	.circle-block {
+		width: 90vh;
+		height: 90vh;
+	}
 }
 
 .center-section {
@@ -52,11 +77,11 @@
 
 .circle-block .clip {
 	background-color: #0E8C40;
-	clip: rect(0px, 460px, 460px, 229.5px);
+	clip-path: inset(0% 0% 0% 50%);
 } 
 
 .clip .item {
-	clip: rect(0px, 230.5px, 460px, 0px);
+	clip-path: inset(0% 50% 0% 0%);
 }
 
 #section-1 {
